--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -98,3 +98,88 @@ body {
     opacity: 1;
     cursor: pointer;
 }
+
+
+//Background
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    overflow: hidden;
+    pointer-events: none;
+}
+
+.background__wrapper {
+    display: flex;
+    min-height: 100%;
+}
+
+.background__slide {
+    position: relative;
+    flex-shrink: 0;
+
+    min-height: 100%;
+}
+
+.background__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+}
+
+.background__image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: grayscale(1);
+}
+
+// text
+.text {
+    position: absolute;
+    bottom: 12.5vh;
+    left: 50%;
+    transform: translate(-50%, 0px);
+    z-index: 5;
+
+    padding-right: 0.9375rem;
+    padding-left: 0.9375rem;
+
+    width: 100%;
+    overflow: hidden;
+    pointer-events: none;
+
+    text-align: center;
+}
+
+.text__wrapper {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+}
+
+.text__slide {
+    position: relative;
+    flex-shrink: 0;
+    text-align: center;
+}
+
+.text__slide span {
+    display: inline-block;
+    max-width: 90vw;
+    padding: .3125rem .625rem;
+    background-color: #000;
+    text-transform: uppercase;
+    font-size: 4vh;
+}
