add styles to open image

--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -195,3 +195,14 @@ body {
         max-width: 48vw;
     }
 }
+
+// open image
+
+.open-image {
+    cursor: pointer;
+}
+
+.text.active {
+    transform: translate(-50%, 100%);
+    opacity: 0;
+}
